[gd_scene load_steps=10 format=3 uid="uid://dx5qdaqelihmk"]

[ext_resource type="Script" path="res://scripts/Player/player.gd" id="1_02cg0"]
[ext_resource type="Texture2D" uid="uid://cgpieb0jx8amq" path="res://assets/Player/Player.png" id="2_5p5ll"]
[ext_resource type="Script" path="res://scripts/Spells/Spell.gd" id="2_6sqax"]
[ext_resource type="Resource" uid="uid://c0q2bwwvix3om" path="res://scripts/Spells/Resources/maho.tres" id="3_d1dv8"]
[ext_resource type="AudioStream" uid="uid://bgd8eiuxbf2ir" path="res://sounds/player_hurt.mp3" id="4_3luyb"]
[ext_resource type="PackedScene" uid="uid://wwhe1otm0ymv" path="res://scenes/Player/player_ui.tscn" id="4_vgfps"]
[ext_resource type="PackedScene" uid="uid://1en5eidwoiyd" path="res://scenes/Player/tombstone.tscn" id="5_st8cg"]
[ext_resource type="PackedScene" uid="uid://cnrv18jj3k7q0" path="res://scenes/Player/pause_menu.tscn" id="7_xnty0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2fde4"]
size = Vector2(8, 10)

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_mask = 20
script = ExtResource("1_02cg0")
spells_inventory = Array[ExtResource("2_6sqax")]([ExtResource("3_d1dv8")])
hurt_sound = ExtResource("4_3luyb")
tombstone_scene = ExtResource("5_st8cg")

[node name="PlayerUI" parent="." instance=ExtResource("4_vgfps")]

[node name="PauseMenu" parent="." instance=ExtResource("7_xnty0")]

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(0, 3)
texture = ExtResource("2_5p5ll")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(9, 3)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(3, 3)
shape = SubResource("RectangleShape2D_2fde4")

[node name="ManaRegenTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="ManaRegenTimer" to="." method="_on_mana_regen_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
